--- a/src/styles/tufte.css
+++ b/src/styles/tufte.css
@@ -69,7 +69,8 @@
 
 /* Tufte CSS styles */
 html {
-  font-size: 13px;
+  font-size: 12px;
+  --guidelines: #cfcfcf;
 }
 
 body {
@@ -85,6 +86,37 @@ body {
   counter-reset: sidenote-counter;
 }
 
+.guidelines {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  display: grid;
+  grid-template-columns: 5% 42.75% 2.25% 21.25% 9.75% 15%;
+}
+
+.guideline {
+  border: 0.5px solid var(--guidelines);
+}
+
+.nav {
+  display: flex;
+  gap: 3.6rem;
+  margin-top: 4.8rem;
+  margin-bottom: 10rem;
+  border-bottom: 1px solid var(--guidelines);
+  /* flex-direction: row; */
+}
+
+.nav p {
+  font-size: 1.8rem;
+  margin-top: 0;
+  line-height: 0.9;
+  margin-bottom: 0;
+}
+
 /* Adds dark mode
 @media (prefers-color-scheme: dark) {
   body {
@@ -95,13 +127,22 @@ body {
 
 h1 {
   font-weight: 400;
-  margin-top: 4rem;
-  margin-bottom: 1.5rem;
-  font-size: 3.2rem;
-  line-height: 1;
+  font-size: 4rem;
+  margin-bottom: 1rem;
+  line-height: 0.74;
+  border-bottom: 1px solid var(--guidelines);
 }
 
 h2 {
+  font-weight: 400;
+  margin-top: 4rem;
+  margin-bottom: 1rem;
+  font-size: 2.9rem;
+  line-height: 1;
+  border-bottom: 1px solid var(--guidelines);
+}
+
+h3 {
   font-style: italic;
   font-weight: 400;
   margin-top: 2.1rem;
@@ -110,14 +151,14 @@ h2 {
   line-height: 1;
 }
 
-h3 {
+/* h3 {
   font-style: italic;
   font-weight: 400;
   font-size: 1.7rem;
   margin-top: 2rem;
   margin-bottom: 1.4rem;
   line-height: 1;
-}
+} */
 
 hr {
   display: block;
@@ -136,6 +177,7 @@ p.subtitle {
   font-size: 1.8rem;
   display: block;
   line-height: 1;
+  color: #6b6b6b;
 }
 
 .numeral {
@@ -153,8 +195,6 @@ article {
 section {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  border-right: 1px solid #d5d5d5;
-  border-left: 1px solid #d5d5d5;
 }
 
 p,
@@ -261,7 +301,9 @@ figure.fullwidth figcaption {
 
 a:link,
 a:visited {
-  color: inherit;
+  color: red;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-style: italic;
   text-underline-offset: 0.1em;
   text-decoration-thickness: 0.05em;
 }
@@ -275,7 +317,7 @@ img {
 .marginnote {
   float: right;
   clear: right;
-  margin-right: -60%;
+  margin-right: -55%;
   width: 50%;
   margin-top: 0.3rem;
   margin-bottom: 0;
@@ -407,9 +449,14 @@ label.margin-toggle:not(.sidenote-number) {
 
 @media (max-width: 760px) {
   body {
-    width: 94%;
-    padding-left: 3%;
-    padding-right: 3%;
+    width: 90%;
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+
+  .nav {
+    justify-content: space-between;
+    gap: unset;
   }
 
   hr,
