--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,12 +18,27 @@ import { imageConfig } from "astro:assets";
 		<meta name="generator" content={Astro.generator} /><link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
 		<title>PALIMPSEST</title>
 	</head>
 		<body>
+			<div class="guidelines">
+				<div class="guideline"></div>
+				<div class="guideline"></div>
+				<div class="guideline"></div>
+				<div class="guideline"></div>
+				<div class="guideline"></div>
+				<div class="guideline"></div>
+			</div>
+			<h1>PALIMPSEST</h1>
+			<p class="subtitle">A newsletter by Shenai Chan</p>
+			<div class="nav">
+				<p><a href="">ABOUT</a></p>
+				<p><a href="">SUBSCRIBE</a></p>
+				<p><a href="">INDEX</a></p>
+			</div>
 			<article>
-				<h1 id="tufte-css">Tufte CSS</h1>
+				<h2 id="tufte-css"><a href="">oblogatory blog post about making this blog</a></h2>
 				<p class="subtitle">Dave Liepmann</p>
 				<section>
 					<p>Tufte CSS provides tools to style web articles using the ideas demonstrated by Edward Tufte’s books and handouts. Tufte’s style is known for its simplicity, extensive use of sidenotes, tight integration of graphics with text, and carefully chosen typography.</p>
@@ -33,7 +48,7 @@ import { imageConfig } from "astro:assets";
 				</section>
 	
 				<section>
-					<h2 id="getting-started">Getting Started</h2>
+					<h3 id="getting-started">Getting Started</h3>
 					<p>To use Tufte CSS, copy <code>tufte.css</code> and the <code>et-book</code> directory of font files to your project directory, then add the following to your HTML document’s <code>head</code> block:</p>
 	
 					<pre><code>&lt;link rel="stylesheet" href="tufte.css"/&gt;</code></pre>
@@ -42,8 +57,8 @@ import { imageConfig } from "astro:assets";
 				</section>
 	
 				<section>
-					<h2 id="fundamentals">Fundamentals</h2>
-					<h3 id="fundamentals--sections-and-headers">Sections and Headings</h3>
+					<h3 id="fundamentals">Fundamentals</h3>
+					<!-- <h3 id="fundamentals--sections-and-headers">Sections and Headings</h3> -->
 					<p>Organize your document with an <code>article</code> element inside your <code>body</code> tag. Inside that, use <code>section</code> tags around each logical grouping of text and headings.</p>
 					<p>Tufte CSS uses <code>h1</code> for the document title, <code>p</code> with class <code>subtitle</code> for the document subtitle, <code>h2</code> for section headings, and <code>h3</code> for low-level headings. More specific headings are not supported. If you feel the urge to reach for a heading of level 4 or greater, consider redesigning your document:</p>
 					<blockquote cite="http://www.edwardtufte.com/bboard/q-and-a-fetch-msg?msg_id=0000hB">
@@ -53,7 +68,7 @@ import { imageConfig } from "astro:assets";
 					<p>As a bonus, this excerpt regarding the use of headings provides an example of block quotes. In Tufte CSS they are just lightly styled, semantically correct HTML using <code>blockquote</code> and <code>footer</code> elements. See page 20 of <a href="https://www.edwardtufte.com/tufte/books_vdqi">The Visual Display of Quantitative Information</a> for an example in print.</p>
 					<p><span class="newthought">In his later books<label for="sn-in-his-later-books" class="margin-toggle sidenote-number"></label></span><input type="checkbox" id="sn-in-his-later-books" class="margin-toggle"/><span class="sidenote"><a href="http://www.edwardtufte.com/tufte/books_be"><em>Beautiful Evidence</em></a></span>, Tufte starts each section with a bit of vertical space, a non-indented paragraph, and the first few words of the sentence set in small caps. For this we use a span with the class <code>newthought</code>, as demonstrated at the beginning of this paragraph. Vertical spacing is accomplished separately through <code>&lt;section&gt;</code> tags. Be consistent: though we do so in this paragraph for the purpose of demonstration, do not alternate use of header elements and the <code>newthought</code> technique. Pick one approach and stick to it.</p>
 	
-					<h3 id="fundamentals--text">Text</h3>
+					<!-- <h3 id="fundamentals--text">Text</h3> -->
 					<p>Although paper handouts obviously have a pure white background, the web is better served by the use of slightly off-white and off-black colors. Tufte CSS uses <code>#fffff8</code> and <code>#111111</code> because they are nearly indistinguishable from their ‘pure’ cousins, but dial down the harsh contrast. We stick to the greyscale for text, reserving color for specific, careful use in figures and images.</p>
 					<p>In print, Tufte has used the proprietary Monotype Bembo<label for="sn-proprietary-monotype-bembo" class="margin-toggle sidenote-number"></label><input type="checkbox" id="sn-proprietary-monotype-bembo" class="margin-toggle"/><span class="sidenote">See Tufte’s comment in the <a href="http://www.edwardtufte.com/bboard/q-and-a-fetch-msg?msg_id=0000Vt">Tufte book fonts</a> thread.</span> font. A similar effect is achieved in digital formats with the now open-source <a href="https://github.com/edwardtufte/et-book">ETBook</a>, which Tufte CSS supplies with a <code>@font-face</code> reference to a .ttf file. In case ETBook somehow doesn’t work, Tufte CSS shifts gracefully to other serif fonts like Palatino and Georgia.</p>
 					<p>Also notice how Tufte CSS includes separate font files for bold (strong) and italic (emphasis), instead of relying on the browser to mechanically transform the text. This is typographic best practice.</p>
@@ -63,7 +78,7 @@ import { imageConfig } from "astro:assets";
 				</section>
 	
 				<section>
-					<h2 id="epigraphs">Epigraphs</h2>
+					<h3 id="epigraphs">Epigraphs</h3>
 					<div class="epigraph">
 						<blockquote>
 							<p>The English language . . . becomes ugly and inaccurate because our thoughts are foolish, but the slovenliness of our language makes it easier for us to have foolish thoughts.</p>
@@ -79,7 +94,7 @@ import { imageConfig } from "astro:assets";
 				</section>
 	
 				<section>
-					<h2 id="sidenotes">Sidenotes: Footnotes and Marginal Notes</h2>
+					<h3 id="sidenotes">Sidenotes: Footnotes and Marginal Notes</h3>
 					<p>One of the most distinctive features of Tufte’s style is his extensive use of sidenotes.<label for="sn-extensive-use-of-sidenotes" class="margin-toggle sidenote-number"></label><input type="checkbox" id="sn-extensive-use-of-sidenotes" class="margin-toggle"/><span class="sidenote">This is a sidenote.</span> Sidenotes are like footnotes, except they don’t force the reader to jump their eye to the bottom of the page, but instead display off to the side in the margin. Perhaps you have noticed their use in this document already. You are very astute.</p>
 					<p>Sidenotes are a great example of the web not being like print. On sufficiently large viewports, Tufte CSS uses the margin for sidenotes, margin notes, and small figures. On smaller viewports, elements that would go in the margin are hidden until the user toggles them into view. The goal is to present related but not necessary information such as asides or citations <em>as close as possible</em> to the text that references them. At the same time, this secondary information should stay out of the way of the eye, not interfering with the progression of ideas in the main text.</p>
 					<p>Sidenotes consist of two elements: a superscript reference number that goes inline with the text, and a sidenote with content. To add the former, just put a label and dummy checkbox into the text where you want the reference to go, like so:</p>
@@ -108,7 +123,7 @@ import { imageConfig } from "astro:assets";
 				</section>
 	
 				<section>
-					<h2 id="figures">Figures</h2>
+					<h3 id="figures">Figures</h3>
 					<p>Tufte emphasizes tight integration of graphics with text. Data, graphs, and figures are kept with the text that discusses them. In print, this means they are not relegated to a separate page. On the web, that means readability of graphics and their accompanying text without extra clicks, tab-switching, or scrolling.</p>
 					<p>Figures should try to use the <code>figure</code> element, which by default are constrained to the main column. Don’t wrap figures in a paragraph tag. Any label or margin note goes in a regular margin note inside the figure. For example, most of the time one should introduce a figure directly into the main flow of discussion, like so:</p>
 					<figure>
@@ -132,7 +147,7 @@ import { imageConfig } from "astro:assets";
 				</section>
 	
 				<section>
-					<h2 id="code">Code</h2>
+					<h3 id="code">Code</h3>
 					<p>Technical jargon, programming language terms, and code samples are denoted with the <code>code</code> class, as I’ve been using in this document to denote HTML. Code needs to be monospace for formatting purposes and to aid in code analysis, but it must maintain its readability. To those ends, Tufte CSS follows GitHub’s font selection, which shifts gracefully along the monospace spectrum from the elegant but rare Consolas all the way to good old reliable Courier.</p>
 					<p>Extended code examples should live in a <code>code</code> element within a <code>pre</code> element. This adds control over indentation and overflow as well:</p>
 					<pre><code>;; Some code examples in Clojure. This is a comment.
@@ -155,7 +170,7 @@ import { imageConfig } from "astro:assets";
 				</section>
 	
 				<section>
-					<h2 id="imagequilts">ImageQuilts</h2>
+					<h3 id="imagequilts">ImageQuilts</h3>
 					<p>Tufte CSS provides support for Edward Tufte and Adam Schwartz’s <a href="http://imagequilts.com/">ImageQuilts</a>. See the <a href="http://www.edwardtufte.com/bboard/q-and-a-fetch-msg?msg_id=0003wk">ET forum announcement thread</a> for more on quilts. Some have ragged edges, others straight. Include these images just as you would any other <code>figure</code>.</p>
 					<p>This is an ImageQuilt surveying Chinese calligraphy, placed in a full-width figure to accomodate its girth:</p>
 					<figure class="fullwidth"><img src={ImageQuiltC.src} alt="Image of Chinese Calligraphy"/></figure>
@@ -164,7 +179,7 @@ import { imageConfig } from "astro:assets";
 				</section>
 	
 				<section>
-					<h2 id="epilogue">Epilogue</h2>
+					<h3 id="epilogue">Epilogue</h3>
 					<p>Many thanks go to Edward Tufte for leading the way with his work. It is only through his kind and careful editing that this project accomplishes what it does. All errors of implementation are of course mine.</p>
 				</section>
 			</article>
